--- a/.github/workflows/merge_check.yml
+++ b/.github/workflows/merge_check.yml
@@ -19,8 +19,8 @@ jobs:
       - name: st1
         run: | 
           echo "$github.actor"
-          if ${{ github.actor != env.NAME_ADMIN }}
+          if ${{ github.triggering_actor != env.NAME_ADMIN }}
           done
       - name: st2
-        if: ${{ github.actor == env.NAME_ADMIN }}
+        if: ${{ github.triggering_actor == env.NAME_ADMIN }}
         run: echo "ok"
