--- a/.github/workflows/merge_check.yml
+++ b/.github/workflows/merge_check.yml
@@ -1,6 +1,5 @@
 name: actions_on_main_branch
 on:
-  workflow_dispatch:
   pull_request_target:
     types:
       - opened
@@ -17,10 +16,8 @@ jobs:
       NAME_ADMIN: prashant753
     steps:
       - name: st1
-        run: | 
-          echo "$github.actor"
-          if ${{ github.triggering_actor != env.NAME_ADMIN }}
-          done
+        if: ${{ github.triggering_actor != env.NAME_ADMIN }}
+        run: exit 1
       - name: st2
         if: ${{ github.triggering_actor == env.NAME_ADMIN }}
         run: echo "ok"
